--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       }
 
       var buildUrl = "Build";
-      var loaderUrl = buildUrl + "/build_1.loader.js";
+      var loaderUrl = buildUrl + "/autoagents.loader.js";
       var config = {
-        dataUrl: buildUrl + "/build_1.data",
-        frameworkUrl: buildUrl + "/build_1.framework.js",
-        codeUrl: buildUrl + "/build_1.wasm",
+        dataUrl: buildUrl + "/autoagents.data",
+        frameworkUrl: buildUrl + "/autoagents.framework.js",
+        codeUrl: buildUrl + "/autoagents.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
         productName: "Evolutionary_Agents_Simulation",
